Make it work with human players